<resources>
    <string name="app_name">NestOwl</string>
    <string name="title_activity_home_screen"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_for_buy">Properties for Buy</string>
    <string name="menu_saved">Saved Properties</string>
    <string name="menu_Recent">Recent Search</string>
    <string name="menu_proposal">Proposal Offered</string>
    <string name="menu_post">Post Property</string>
    <string name="menu_owner">Owner Plans Property</string>
    <string name="menu_manage">Manage / Edit Listing</string>
    <string name="menu_view">View Leads</string>
    <string name="menu_proposal_recv">Proposal Received</string>
    <string name="menu_buy_our">Buy Our Service</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_rate">Rate Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About Us</string>
    <string name="menu_terms">Terms of Use</string>
    <string name="menu_contact">Contact Us</string>


    <style name="DialogCustomTheme" parent="android:Theme.Holo.Dialog.NoActionBar">
        <item name="android:windowBackground">@android:color/transparent</item>
        <item name="android:colorBackgroundCacheHint">@null</item>
    </style>

    <array name="lead_type">
        <item>Lead Type</item>
        <item>cab</item>
        <item>bus</item>
        <item>Two Wheeler</item>

    </array>

    <array name="lead_status">
        <item>Lead Status</item>
        <item>cab</item>
        <item>bus</item>
        <item>Two Wheeler</item>

    </array>

    <array name="lead_format">
        <item>Lead Format</item>
        <item>Direct Lead</item>
        <item>Proposal</item>


    </array>

    <array name="listed_to">
        <item>Listed To</item>
        <item>cab</item>
        <item>bus</item>
        <item>Two Wheeler</item>

    </array>
    <array name="customer">
        <item>GURGAON</item>
        <item>DELHI</item>
    </array>

    <array name="proposal_status">
        <item>Proposal Status</item>

        <item>GURGAON</item>
        <item>DELHI</item>
    </array>
    <array name="work_location">
        <item>Work Location</item>

        <item>GURGAON</item>
        <item>DELHI</item>
    </array>

    <array name="user_type">
        <item>User Type</item>

        <item>GURGAON</item>
        <item>DELHI</item>
    </array>

    <array name="property_status">
        <item>Property Status</item>

        <item>Live</item>


        <item>Boosted</item>
        <item>Freezed</item>

        <item>Under Review</item>
        <item>Incomplete</item>

        <item>History</item>


    </array>

    <array name="property_type">
        <item>Property Type</item>

    </array>


    <array name="poste_date">

        <item>Posted by</item>

        <item>GURGAON</item>
        <item>DELHI</item>
    </array>

    <array name="posted_to">

        <item>Public</item>

        <item>Nest Pro s</item>

    </array>
    <array name="bhk">
        <item>BHK</item>

        <item>GURGAON</item>
        <item>DELHI</item>
    </array>
    <array name="budget">
        <item>Budget</item>

        <item>GURGAON</item>
        <item>DELHI</item>
    </array>
    <array name="city_centic">
        <item>City Centric</item>

        <item>GURGAON</item>
        <item>DELHI</item>
    </array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
